--- a/Recurcar/css/main.css
+++ b/Recurcar/css/main.css
@@ -6,7 +6,7 @@
 }
 .box {
     width: 300px;
-    height: 600px;
+    height: 560px;
     padding: 15px;
     background-color: rgb(21, 255, 204);
     box-shadow: 10px 10px lightblue;
@@ -85,4 +85,28 @@ main {
 .users td {
     border: 1px solid gray;
     padding: 10px;
+}
+
+.meny {
+    background-color: black;
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    list-style-type: none;
+    overflow: hidden;
+
+}
+.li {
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+li a {
+    text-decoration: none;
+    color: wheat;
+    
 }
